# CPUScheduling

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  main.cpp  requirements.txt
data/: sample_input.txt  test_5_processes.txt  test_8_processes.txt  test_professor_sample.txt
docs/: PROJECT_DOCUMENTATION.md
gui/: scheduler_api.py  scheduler_gui.py
src/: api.cpp  io_handler.cpp  types.cpp
src/algorithms/: algorithms.cpp  fcfs.cpp  priority.cpp  round_robin.cpp  sjf.cpp
src/data_structures/: linked_list.cpp  priority_queue.cpp  queue.cpp  stack.cpp
